# Radar-System-ROS2-Package

./: README.md
src/: package.xml
src/bringup/: CMakeLists.txt  package.xml
src/bringup/config/: nav2_params.yaml  nav2_params_terrain_analysis.yaml
src/bringup/include/bringup/: radar_data_converter.hpp
src/bringup/launch/: bringup.launch.py  navigation_launch.py
src/bringup/map/: rmuc_2026.yaml
src/bringup/rviz/: nav2_default_view.rviz  nav2_default_view2.rviz  test.rviz  test2.rviz  test_map.rviz
src/bringup/src/: base_to_robot.cpp  odom_to_tf.cpp  radar_to_serial_node.cpp  self_filter_node.cpp  self_filter_node_segmentation.cpp  tf_diff_calculator.cpp
src/lidar_against/: CMakeLists.txt  package.xml
src/lidar_against/launch/: radar_system_launch.py
src/lidar_against/src/: base_point_publisher.cpp  radar_distance.cpp
src/loam_interface/launch/: loam_interface_launch.py
src/point_lio/config/: mid360.yaml
src/point_lio/launch/: point_lio.launch.py
src/radar_system/: CMakeLists.txt  package.xml
src/radar_system/launch/: combined_radar_system.launch.py
src/radar_system/src/: distance_monitor.cpp  radar_distance.cpp  radar_position_publisher.cpp
src/sensor_scan_generation/launch/: sensor_scan_generation.launch.py
src/sensor_scan_generation/src/: sensor_scan_generation.cpp
