<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>Robot Master bringup package with modular launch system</description>
  <maintainer email="chen.junn@outlook.com">chenjun</maintainer>
  <license>Apache License 2.0</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 核心依赖 -->
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>libpcl-all-dev</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <!-- 外部包依赖 -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>linefit_ground_segmentation_ros</exec_depend>
  <exec_depend>point_lio</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>rviz2</exec_depend>
 
  <export>
    <build_type>ament_cmake</build_type>
    
    <!-- 导出launch文件支持 -->
    <launch>
      <launch-prefix>$(env LAUNCH_PREFIX)</launch-prefix>
    </launch>
  </export>
</package>